# gpu-physics-engine

./: .gitignore  Cargo.toml  README.md
src/: app.rs  camera.rs  input_manager.rs  lib.rs  main.rs  render_timer.rs  state.rs  surface_manager.rs  wgpu_context.rs
src/game/: grid.rs  input_manager.rs  mod.rs  state.rs
src/game/grid/: grid.rs  grid.wgsl
src/game_data/: mod.rs
src/game_data/line/: line.wgsl  lines.rs
src/game_data/particle/: particle.rs  particle_system.rs  particle_system.wgsl  shader.wgsl
src/grid/: grid.rs  grid.wgsl  grid_drawer.rs  mod.rs
src/lines/: line.wgsl  lines.rs
src/particles/: home_cell_ids.wgsl  mod.rs  particle_buffers.rs  particle_drawer.rs  particle_drawer.wgsl  particle_home_cell_ids_kernel.rs  particle_integration.rs  particle_integration.wgsl  particle_kernels.rs  particle_push_constants.rs  particle_rearrange.rs  particle_sort.rs  particle_system.rs  particle_system.wgsl  rearrange.wgsl
src/physics/: collision_cell_buffers.rs  collision_cell_builder.rs  collision_cell_builder.wgsl  collision_solver.rs  collision_solver.wgsl  collision_system.rs  mod.rs
src/renderer/: camera.rs  mod.rs  renderable.rs  renderer.rs  surface_manager.rs  wgpu_context.rs
src/shaders/renderShaders/: shader.wgsl
src/utils/: bind_resources.rs  compute_shader.rs  gpu_buffer.rs  gpu_timer.rs  input_manager.rs  mod.rs  render_timer.rs
src/utils/prefix_sum/: mod.rs  prefix_sum.rs  prefix_sum.wgsl
src/utils/radix_sort/: mod.rs  radix_sort.rs  radix_sort.wgsl  (+1 more)
tests/: common.rs  grid.rs  particle_sort.rs  prefix_sum.rs  radix_sort.rs
